# SmartHiome

./: AddDeviceView.qml  AlertsView.qml  AppShell.qml  CMakeLists.txt  DashboardView.qml  DeviceControlView.qml  DeviceDetailView.qml  HistoryView.qml  HomeView.qml  LoginView.qml  Main.qml  README_FIX_SCAN_DETAIL.txt  README_HOTFIX_QML_ERROR.txt  README_HUONG_DAN.txt  RoomDevicesView.qml  RoomsView.qml  SettingsView.qml  StatisticsView.qml  ThresholdSettingsView.qml  main.cpp  simulationengine.cpp  simulationengine.h
.github/workflows/: main.yml
components/: BarChart.qml  BottomNav.qml  DeviceRow.qml  LineChart.qml  MetricCard.qml  PageHeader.qml  RoomCard.qml  SegmentedTabs.qml
